--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1Poem></h1>
+    <h1>Poem></h1>
     <h3>By Nash-Kim</h3>
     <p>Rainbow.<strong>Rainbow.</strong>You are my rainbow.</p>
   </body>
